BPER/DEVF/force-app/main/default/objects/CRM_AccountDetail__c/CRM_AccountDetail__c.object-meta.xml
<CustomObject>
    <label>Dettaglio Account</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nome Dettaglio Account</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dettagli Account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>