BPER/DEVF/force-app/main/default/objects/CRM_AccountDetail__c/fields/CRM_AbilitatoOFS__c.field-meta.xml
<CustomField>
    <fullName>CRM_AbilitatoOFS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abilitato OFS</label>
    <type>Checkbox</type>
</CustomField>