BPER/DEVF/force-app/main/default/objects/CRM_AccountDetail__c/fields/CRM_Account__c.field-meta.xml
<CustomField>
    <fullName>CRM_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dettagli Account</relationshipLabel>
    <relationshipName>Dettagli_Account</relationshipName>
    <type>Lookup</type>
</CustomField>