BPER/DEVF/force-app/main/default/objects/CRM_AccountDetail__c/fields/CRM_IntestatarioRapporto__c.field-meta.xml
<CustomField>
    <fullName>CRM_IntestatarioRapporto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intestatario Rapporto</label>
    <type>Checkbox</type>
</CustomField>