BPER/DEVF/force-app/main/default/objects/CRM_AccountDetail__c/fields/CRM_TitoloOFS__c.field-meta.xml
<CustomField>
    <fullName>CRM_TitoloOFS__c</fullName>
    <formula>Name &amp; &quot; - &quot; &amp; IF(CRM_AbilitatoOFS__c, &apos;Abilitato OFS&apos;, &apos;NON Abilitato OFS&apos;) &amp; &quot; &amp; &quot; &amp; IF(CRM_IntestatarioRapporto__c, &apos;Abilitato Intestatario di rapporto&apos;, &apos;NON Abilitato Intestatario di rapporto&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Titolo OFS</label>
    <type>Text</type>
</CustomField>